...
            android:gravity="center"
            android:textColor="@color/goldenColor"
            android:textSize="14sp" />
    </LinearLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/profile_tabLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:tabIndicatorColor="@color/colorPrimary"
        app:tabRippleColor="@color/goldenColor"
        app:tabSelectedTextColor="@color/colorPrimary">
...
            android:layout_height="wrap_content"
            android:text="Post" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Recipe" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Saved" />
    </com.google.android.material.tabs.TabLayout>
...
