<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.fragments.RecipeFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fr_profileRecipeRV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">
    </androidx.recyclerview.widget.RecyclerView>

</LinearLayout>